# aicodestyle

./: .gitignore  DESIGN.md  LICENSE  README.md  SHARING.md  pyproject.toml
docs/: DESIGN-PORTAL.md
docs/superpowers/plans/: 2026-06-09-aianalyzer-mlp.md  2026-06-10-aianalyzer-portal.md  2026-06-10-token-economy.md  2026-06-11-ai-coach.md
packaging/: aianalyzer.spec  build_exe.ps1  launcher.py  rthook_tiktoken.py
src/aianalyzer/: __init__.py  cli.py  coaching.py  discovery.py  features.py  insights.py  narrative.py  normalize.py  pricing.py  redact.py  stats.py  store.py
src/aianalyzer/classifier/: __init__.py  archetypes.py  rules.py  session_types.py  weights.py  weights.yaml
src/aianalyzer/collectors/: base.py  copilot_cli.py  vscode_copilot.py
src/aianalyzer/report/: terminal.py
src/aianalyzer/web/: app.py  jobs.py  services.py
src/aianalyzer/web/static/: app.js  index.html  styles.css
tests/: conftest.py  test_archetypes.py  test_classifier_modifiers.py  test_classifier_primary.py  test_classifier_weights.py  test_cli_report.py  test_cli_scan.py  test_cli_serve.py  test_coaching.py  test_collectors_base.py  test_copilot_cli.py  test_discovery.py  test_discovery_vscode.py  test_features_hands_on.py  test_features_meta.py  test_features_portal.py  test_features_profile.py  test_features_prompt_facts.py  test_features_text.py  test_features_tokens.py  test_features_turn_tool.py  test_insights.py  test_narrative.py  test_normalize.py  test_packaging.py  test_pricing.py  test_redact.py  test_report_terminal.py  test_session_types.py  test_stats.py  test_store.py  test_token_estimation.py  test_vscode_copilot_collector.py  test_vscode_copilot_store.py  test_web_api.py  test_web_skeleton.py
tests/fixtures/: events_minimal.jsonl  events_planner.jsonl  events_vibe.jsonl  session_db_sample.sql
tests/fixtures/home/.copilot/session-state/aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa/: events.jsonl
