[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "aianalyzer"
version = "0.1.0"
description = "Local-first analyzer for AI coding-assistant sessions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ruwang" }]
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "duckdb>=1.0",
  "rich>=13.7",
  "pyyaml>=6.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
]

[project.scripts]
aianalyzer = "aianalyzer.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/aianalyzer"]

[tool.hatch.build.targets.wheel.force-include]
"src/aianalyzer/classifier/weights.yaml" = "aianalyzer/classifier/weights.yaml"
"src/aianalyzer/web/static" = "aianalyzer/web/static"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
